; ModuleID = '/home/carl/AnghaBench/jemalloc/test/unit/extr_hook.c_assert_args_raw.c'
source_filename = "/home/carl/AnghaBench/jemalloc/test/unit/extr_hook.c_assert_args_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_args_raw = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Raw args mismatch\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i32)* @assert_args_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_args_raw(i64* %0, i32 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i64* %0, i64** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i64*, i64** %3, align 8
  %7 = load i32, i32* @arg_args_raw, align 4
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = mul i64 8, %9
  %11 = trunc i64 %10 to i32
  %12 = call i32 @memcmp(i64* %6, i32 %7, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @assert_d_eq(i32 %13, i32 0, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @memcmp(i64*, i32, i32) #1

declare dso_local i32 @assert_d_eq(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
